Fix why-us card title vertical alignment for 769-1480

--- a/sass/blocks/_why-us.scss
+++ b/sass/blocks/_why-us.scss
@@ -275,6 +275,13 @@
 		hyphens: none;
 	}
 
+	.why-us-item-2 .why-us-item-title,
+	.why-us-item-3 .why-us-item-title,
+	.why-us-item-4 .why-us-item-title,
+	.why-us-item-5 .why-us-item-title {
+		margin-top: 20px;
+	}
+
 	.why-us-item-title {
 		text-wrap: balance;
 	}
